--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "repository": "dougwilson/nodejs-depd",
   "browser": "lib/browser/index.js",
   "devDependencies": {
-    "benchmark": "2.1.4",
     "beautify-benchmark": "0.2.4",
-    "eslint": "3.19.0",
+    "benchmark": "2.1.4",
+    "eslint": "^8.9.0",
     "eslint-config-standard": "7.1.0",
-    "eslint-plugin-markdown": "1.0.0-beta.7",
+    "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
     "istanbul": "0.4.5",
-    "mocha": "~1.21.5"
+    "mocha": "^9.2.1",
+    "prettier": "^2.5.1"
   },
   "files": [
     "lib/",
@@ -36,6 +37,7 @@
     "lint": "eslint --plugin markdown --ext js,md .",
     "test": "mocha --reporter spec --bail test/",
     "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --no-exit test/",
-    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot test/"
+    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot test/",
+    "format": "prettier --write ."
   }
 }
