--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: node_js
 node_js:
-  - "0.6"
-  - "0.8"
-  - "0.10"
-  - "0.12"
-  - "1.8"
-  - "2.5"
-  - "3.3"
-  - "4.8"
-  - "5.12"
-  - "6.12"
-  - "7.10"
-  - "8.9"
-  - "9.2"
+  - '0.6'
+  - '0.8'
+  - '0.10'
+  - '0.12'
+  - '1.8'
+  - '2.5'
+  - '3.3'
+  - '4.8'
+  - '5.12'
+  - '6.12'
+  - '7.10'
+  - '8.9'
+  - '9.2'
 sudo: false
 dist: precise
 cache:
@@ -20,23 +20,23 @@ cache:
     - node_modules
 before_install:
   # Skip updating shrinkwrap / lock
-  - "npm config set shrinkwrap false"
+  - 'npm config set shrinkwrap false'
 
   # Remove all non-test dependencies
-  - "npm rm --save-dev benchmark beautify-benchmark || true"
+  - 'npm rm --save-dev benchmark beautify-benchmark || true'
 
   # Setup Node.js version-specific dependencies
   - "test $TRAVIS_NODE_VERSION != '0.6' || npm rm --save-dev istanbul"
   - "test $TRAVIS_NODE_VERSION != '0.8' || npm rm --save-dev istanbul"
   - "test $TRAVIS_NODE_VERSION = '0.6' -o $TRAVIS_NODE_VERSION = '0.8' || npm install browserify"
-  - "test $(echo $TRAVIS_NODE_VERSION | cut -d. -f1) -ge 4 || npm rm --save-dev eslint eslint-config-standard eslint-plugin-markdown eslint-plugin-promise eslint-plugin-standard"
+  - 'test $(echo $TRAVIS_NODE_VERSION | cut -d. -f1) -ge 4 || npm rm --save-dev eslint eslint-config-standard eslint-plugin-markdown eslint-plugin-promise eslint-plugin-standard'
 
   # Update Node.js modules
-  - "test ! -d node_modules || npm prune"
-  - "test ! -d node_modules || npm rebuild"
+  - 'test ! -d node_modules || npm prune'
+  - 'test ! -d node_modules || npm rebuild'
 script:
   # Run test script, depending on istanbul install
-  - "test ! -z $(npm -ps ls istanbul) || npm test"
-  - "test   -z $(npm -ps ls istanbul) || npm run-script test-ci"
-  - "test   -z $(npm -ps ls eslint  ) || npm run-script lint"
-after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
+  - 'test ! -z $(npm -ps ls istanbul) || npm test'
+  - 'test   -z $(npm -ps ls istanbul) || npm run-script test-ci'
+  - 'test   -z $(npm -ps ls eslint  ) || npm run-script lint'
+after_script: 'npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls'
