--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "beautify-benchmark": "0.2.4",
     "benchmark": "2.1.4",
     "eslint": "^8.9.0",
-    "eslint-config-standard": "7.1.0",
-    "eslint-plugin-markdown": "^2.2.1",
-    "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-standard": "3.0.1",
+    "eslint-config-prettier": "^8.4.0",
     "istanbul": "0.4.5",
     "mocha": "^9.2.1",
     "prettier": "^2.5.1"
@@ -34,7 +31,7 @@
   },
   "scripts": {
     "bench": "node benchmark/index.js",
-    "lint": "eslint --plugin markdown --ext js,md .",
+    "lint": "eslint .",
     "test": "mocha --reporter spec --bail test/",
     "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --no-exit test/",
     "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot test/",
